fix(*): mobile videos + no panelsnap on mobile + responsive fix

--- a/src/scss/sections/_part1.scss
+++ b/src/scss/sections/_part1.scss
@@ -56,5 +56,10 @@ section.part1{
         .title_part1, .title_part2 {
             margin: 20px;
         }
+
+        .title_part2 {
+          font-size: rem(45);
+          line-height: 1.24;
+        }
     }
 }
